--- a/app/src/main/res/layout/list_item_card.xml
+++ b/app/src/main/res/layout/list_item_card.xml
@@ -75,11 +75,11 @@
 				android:layout_width="140sp"
 				android:layout_height="40sp"
 				android:scaleType="center"
-				
 				android:id="@+id/add_to_cart_button"
 				android:src="@drawable/ic_baseline_add_shopping_cart_24"
 				android:layout_centerVertical="true"
-				android:layout_alignParentEnd="true"/>
+				android:layout_alignParentEnd="true"
+				android:contentDescription="@null" />
 			
 		</RelativeLayout>
 	</LinearLayout>
